fix carousel on mobile screen

--- a/src/Components/Carousel.scss
+++ b/src/Components/Carousel.scss
@@ -23,6 +23,7 @@
 
     @media screen and (max-width: 767px) {
       width: 90vw;
+      border: 1px solid gold;
       height: 30vh;
       margin-left: 0;
       margin: 0;
@@ -86,7 +87,7 @@
   }
 
   .swiperSlideContentTextInner {
-    position: absolute;
+    position: sticky;
     bottom: 0;
     left: 0;
     height: max-content;
